@@ -7,6 +7,7 @@ import net.bendercraft.spigot.commandsigns.data.ICommandBlockSaver;
 import net.bendercraft.spigot.commandsigns.model.CommandBlock;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedList;
@@ -15,9 +16,8 @@ import java.util.List;
 /**
  * Created by Nokorbis on 22/01/2016.
  */
-public class JsonCommandBlockSaver implements ICommandBlockSaver {
-
-    private static final String CHARSET = "UTF-8";
+public class JsonCommandBlockSaver implements ICommandBlockSaver
+{
     private static final String FOLDERNAME = "CommandBlocks";
     private static final String EXT = ".json";
 
@@ -25,18 +25,21 @@ public class JsonCommandBlockSaver implements ICommandBlockSaver {
     private Gson gson;
     private DataFilesFilter filter;
 
-    public JsonCommandBlockSaver(File baseFolder) {
+    public JsonCommandBlockSaver(File baseFolder)
+    {
         GsonBuilder builder = new GsonBuilder();
         gson = builder.setPrettyPrinting()
                 .registerTypeAdapter(CommandBlock.class, new CommandBlockGsonSerializer())
                 .create();
 
-        if (!baseFolder.exists()) {
+        if (!baseFolder.exists())
+        {
             baseFolder.mkdirs();
         }
 
         dataFolder = new File(baseFolder, FOLDERNAME);
-        if (!dataFolder.exists()) {
+        if (!dataFolder.exists())
+        {
             dataFolder.mkdirs();
         }
 
@@ -44,23 +47,24 @@ public class JsonCommandBlockSaver implements ICommandBlockSaver {
     }
 
     @Override
-    public boolean save(CommandBlock cmdB) {
-        try {
+    public boolean save(CommandBlock cmdB)
+    {
+        try
+        {
             File file = new File(dataFolder, cmdB.getId() + EXT);
-            if (!file.exists()) {
+            if (!file.exists())
+            {
                 file.createNewFile();
             }
             OutputStream os = new FileOutputStream(file);
-            OutputStreamWriter writer = new OutputStreamWriter(os, CHARSET);
+            OutputStreamWriter writer = new OutputStreamWriter(os, StandardCharsets.UTF_8);
             String json = gson.toJson(cmdB);
             writer.write(json);
             writer.close();
             return true;
-        } catch (FileNotFoundException e) {
-            CommandSignsPlugin.getPlugin().getLogger().severe("Was not able to find a file while saving a command block : " + cmdB.getId());
-            CommandSignsPlugin.getPlugin().getLogger().severe(e.getMessage());
-            return false;
-        } catch (IOException e) {
+        }
+        catch (IOException e)
+        {
             CommandSignsPlugin.getPlugin().getLogger().severe("Was not able to create a file while saving a command block : " + cmdB.getId());
             CommandSignsPlugin.getPlugin().getLogger().severe(e.getMessage());
             return false;
@@ -68,27 +72,28 @@ public class JsonCommandBlockSaver implements ICommandBlockSaver {
     }
 
     @Override
-    public CommandBlock load(long id) {
+    public CommandBlock load(long id)
+    {
         File file = new File(dataFolder, id + EXT);
         return load(file);
     }
 
-    public CommandBlock load(File file) {
-        if (!file.exists()) {
+    public CommandBlock load(File file)
+    {
+        if (!file.exists())
+        {
             return null;
         }
-        try {
+        try
+        {
             InputStream is = new FileInputStream(file);
-            InputStreamReader reader = new InputStreamReader(is, CHARSET);
+            InputStreamReader reader = new InputStreamReader(is, StandardCharsets.UTF_8);
             CommandBlock cmdB = gson.fromJson(reader, CommandBlock.class);
             reader.close();
             return cmdB;
-        } catch (FileNotFoundException e) {
-            CommandSignsPlugin.getPlugin().getLogger().severe("Was not able to find a file while loading a command block : " + file.getName());
-            CommandSignsPlugin.getPlugin().getLogger().severe(e.getMessage());
-        } catch (UnsupportedEncodingException e) {
-            CommandSignsPlugin.getPlugin().getLogger().severe("Was not able to handle the charset : " + CHARSET);
-        } catch (IOException e) {
+        }
+        catch (IOException e)
+        {
             CommandSignsPlugin.getPlugin().getLogger().severe("Was not able to read a file while loading a command block : " + file.getName());
             CommandSignsPlugin.getPlugin().getLogger().severe(e.getMessage());
         }
@@ -96,25 +101,32 @@ public class JsonCommandBlockSaver implements ICommandBlockSaver {
     }
 
     @Override
-    public boolean saveAll(Collection<CommandBlock> cmdBlocks) {
-        for (CommandBlock cmdBlock : cmdBlocks) {
+    public boolean saveAll(Collection<CommandBlock> cmdBlocks)
+    {
+        for (CommandBlock cmdBlock : cmdBlocks)
+        {
             save(cmdBlock);
         }
         return true;
     }
 
     @Override
-    public Collection<CommandBlock> loadAll() {
-        if (!dataFolder.exists()) {
+    public Collection<CommandBlock> loadAll()
+    {
+        if (!dataFolder.exists())
+        {
             dataFolder.mkdirs();
             return Collections.emptyList();
         }
         List<CommandBlock> cmdBs = new LinkedList<CommandBlock>();
         File[] files = dataFolder.listFiles(filter);
-        if (files != null) {
-            for (File file : files) {
+        if (files != null)
+        {
+            for (File file : files)
+            {
                 CommandBlock cmd = load(file);
-                if(cmd != null) {
+                if(cmd != null)
+                {
                     cmdBs.add(cmd);
                 }
             }
@@ -124,25 +136,29 @@ public class JsonCommandBlockSaver implements ICommandBlockSaver {
     }
 
     @Override
-    public boolean delete(long id) {
+    public boolean delete(long id)
+    {
         File file = new File(dataFolder, id + EXT);
         return delete(file);
     }
 
-    public boolean delete(File file) {
-        if (!file.exists()) {
+    public boolean delete(File file)
+    {
+        if (!file.exists())
+        {
             return true;
         }
         file.delete();
         return true;
     }
 
-    private static class DataFilesFilter implements FilenameFilter{
-
+    private static class DataFilesFilter implements FilenameFilter
+    {
         private static final String ALLOWED_PATTERN = "^\\d+\\.json$";
 
         @Override
-        public boolean accept(File dir, String name) {
+        public boolean accept(File dir, String name)
+        {
             return name.matches(ALLOWED_PATTERN);
         }
     }
