@@ -1,5 +1,6 @@
 CommandSigns v1.5.8
-    Add the possiblity to delay betweens commands using ` followed by the number of seconds
+    Add the possibility to delay between commands using ` followed by the number of seconds
+    Use world'sname instead of world uuid by default (but world uuid is still supported)
 
 CommandSigns v1.5.5
     Cooldowns (global and per users) can now support bigger numbers
